Music Player Screen UI update

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/slider": "^4.2.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-track-player": "^2.2.0-rc4",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
