--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,10 +19,11 @@ buildscript {
     }
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.0.4")
+        classpath("com.google.gms:google-services:4.3.3")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
         // NOTE: Do not place your application dependencies here; they belong
@@ -40,14 +41,15 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-        mavenCentral {
-            // We don't want to fetch react-native from Maven Central as there are
-            // older versions over there.
-            content {
-                excludeGroup "com.facebook.react"
-            }
-        }
+        // mavenCentral {
+        //     // We don't want to fetch react-native from Maven Central as there are
+        //     // older versions over there.
+        //     content {
+        //         excludeGroup "com.facebook.react"
+        //     }
+        // }
         google()
+        jcenter()
         maven { url 'https://www.jitpack.io' }
     }
 }
